# ml-baseline-system

./: .gitignore  README.md  pyproject.toml
data/processed/: features.csv
models/registry/: latest.txt
models/runs/20251230_174446/: run_info.json
models/runs/20251230_174446/metrics/: baseline_holdout.json
models/runs/20251230_174835/: run_info.json
models/runs/20251230_174835/metrics/: baseline_holdout.json
models/runs/20251230_175705/: run_meta.json
models/runs/20251230_175705/metrics/: baseline_holdout.json
models/runs/20251230_175705/schema/: input_schema.json
models/runs/20251230_175705/tables/: holdout_input.csv  holdout_predictions.csv
models/runs/20251230_180854/: run_meta.json
models/runs/20251230_180854/metrics/: baseline_holdout.json
models/runs/20251230_180854/model/: model.joblib
models/runs/20251230_180854/schema/: input_schema.json
models/runs/20251230_180854/tables/: holdout_input.parquet  holdout_predictions.parquet
models/runs/20260101_044253/: run_meta.json
models/runs/20260101_044253/metrics/: baseline_holdout.json  holdout_metrics.json
notebooks/: ml_model_project.ipynb
outputs/: bad_input_missing_feature.csv  bad_input_with_target.csv  bad_input_with_target.parquet  predictions.parquet  preds.csv
reports/: eval_summary.md  model_card.md
src/ml_baseline/: cli.py  io.py  metrics.py  pipeline.py  predict.py  schema.py  splits.py  train.py
tests/: __init__.py  test_cli.py  test_predict.py  test_predict_output.py  test_schema.py  test_train_predict.py
