[project]
name = "ml-baseline-system"
version = "0.1.0"  
requires-python = ">=3.11"
dependencies = [
  "typer",
  "streamlit",
  "pandas",
  "pyarrow",
  "numpy",
  "plotly==6.5.0",
  "kaleido==1.2.0",
  "jupyterlab>=4.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml"] 