[project]
name = "ml-baseline-system"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "typer",
  "streamlit",
  "pandas",
  "pyarrow",
  "numpy",
  "scikit-learn>=1.3.0",
  "plotly==6.5.0",
  "kaleido==1.2.0",
  "jupyterlab>=4.5.1",
  "notebook>=7.0.0",
  "joblib",
  "matplotlib>=3.10.8",
  "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_baseline"]

[project.scripts]
ml-baseline = "ml_baseline.cli:app"
